clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr34768_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr34768-2.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn foo() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %33 = alloca s32i, "__retval", align 4
        %34 = get_global @x : s32i*
        %35 = load %34 : s32i, align 4
        minus
        %37 = get_global @x : s32i*
        store %36, %37, align 4
        %38 = const 0 : s32i
        store %38, %33
        %39 = load %33 : s32i
        return %39
}
fn bar() -> s32i [external, c, no_inline, const, dso_local, nothrow] {
        %30 = alloca s32i, "__retval", align 4
        %31 = const 0 : s32i
        store %31, %30
        %32 = load %30 : s32i
        return %32
}
fn test(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %11 = alloca s32i, "c", align 4
        %12 = alloca s32i, "__retval", align 4
        %13 = alloca s32i, "tmp", align 4
        %14 = alloca s32i, "res", align 4
        store %arg0, %11
        %15 = get_global @x : s32i*
        %16 = load %15 : s32i, align 4
        store %16, %13, align 4
        %17 = load %11 : s32i, align 4
        %18 = cast(int_to_bool) %17 : bool
        %19 = get_global @foo : () -> s32i*
        %20 = get_global @bar : () -> s32i*
        select
        %22 = call () : s32i [all]
        store %22, %14, align 4
        %23 = load %13 : s32i, align 4
        %24 = get_global @x : s32i*
        %25 = load %24 : s32i, align 4
        %26 = add %23, %25 : s32i [nsw]
        %27 = load %14 : s32i, align 4
        %28 = add %26, %27 : s32i [nsw]
        store %28, %12
        %29 = load %12 : s32i
        return %29
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 1 : s32i
        %3 = get_global @x : s32i*
        store %2, %3, align 4
        scope {
                %6 = const 1 : s32i
                %7 = call @test(%6) : s32i [all]
                %8 = const 0 : s32i
                cmp
                if %9 {
                        %10 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
