clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr35231.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr35231.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %10 = alloca s32i, "bits_per_pixel", align 4
        %11 = alloca s32i, "depth", align 4
        %12 = alloca s32i, "__retval", align 4
        store %arg0, %10
        store %arg1, %11
        scope {
                %15 = load %10 : s32i, align 4
                %16 = load %11 : s32i, align 4
                or
                %18 = const 1 : s32i
                cmp
                if %19 {
                        %20 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %13 = load %10 : s32i, align 4
        store %13, %12
        %14 = load %12 : s32i
        return %14
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %4 = const 2 : s32i
                %5 = const 0 : s32i
                %6 = call @foo(%4, %5) : s32i [all]
                %7 = const 2 : s32i
                cmp
                if %8 {
                        %9 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
