clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr35456.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr35456.c" (c, x86_64-unknown-linux-gnu)
fn not_fabs(%arg0: double) -> double [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: double):
        %13 = alloca double, "x", align 8
        %14 = alloca double, "__retval", align 8
        store %arg0, %13
        %15 = load %13 : double, align 8
        %16 = const 0.000000e+00 : double
        cmp
        %18 = ternary %17 ? { : double
                %22 = load %13 : double, align 8
                yield %22
        } : {
                %20 = load %13 : double, align 8
                fneg
                yield %21
        }
        store %18, %14
        %19 = load %14 : double
        return %19
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca double, "x", align 8
        %2 = alloca double, "y", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const -0.000000e+00 : double
        store %4, %1, align 8
        %5 = load %1 : double, align 8
        %6 = call @not_fabs(%5) : double [all]
        store %6, %2, align 8
        scope {
                %9 = load %2 : double, align 8
                signbit
                not
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
